# cards-api-rust

./: .gitignore  Cargo.toml
migrations/2023-05-23-092112_create_users/: up.sql
migrations/2023-05-25-095841_create_decks/: down.sql  up.sql
migrations/2023-05-25-095852_create_cards/: up.sql
migrations/test_add_users/: up.sql
src/: main.rs
tests/: create_card.http  create_user.http  list_cards.http  list_users.http
