[package]
name = "cards-api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.16"
axum-macros = "0.3.7"
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
diesel = { version = "2", features = ["postgres"] }
diesel_migrations = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
#hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
#tower = "0.4.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"